<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/linearLayout">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/labelHabitName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/habit_name_field" />

        <EditText
            android:id="@+id/textHabitName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:maxLength="20" />

        <TextView
            android:id="@+id/labelHabitReason"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reason" />

        <EditText
            android:id="@+id/textHabitReason"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:maxLength="30" />

        <TextView
            android:id="@+id/labelHabitStartDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/starting_date" />

        <Button
            android:id="@+id/buttonSelectDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_a_date" />

        <TextView
            android:id="@+id/labelDayOfWeek"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/repeat" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonSunday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/lighterAmber"
                android:text="@string/sunday_abr"
                android:textSize="10sp" />

            <Button
                android:id="@+id/buttonMonday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/lighterAmber"
                android:text="@string/monday_abr"
                android:textSize="10sp" />

            <Button
                android:id="@+id/buttonTuesday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/lighterAmber"
                android:text="@string/tuesday_abr"
                android:textSize="10sp" />

            <Button
                android:id="@+id/buttonWednesday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/lighterAmber"
                android:text="@string/wedndesday_abr"
                android:textSize="10sp" />

            <Button
                android:id="@+id/buttonThursday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/lighterAmber"
                android:text="@string/thursday_abr"
                android:textSize="10sp" />

            <Button
                android:id="@+id/buttonFriday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/lighterAmber"
                android:text="@string/friday_abr"
                android:textSize="10sp" />

            <Button
                android:id="@+id/buttonSaturday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/lighterAmber"
                android:text="@string/saturday_abr"
                android:textSize="10sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/labelProgress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/completion_rate" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:max="100"
            android:progress="100"
            tools:layout_editor_absoluteX="108dp"
            tools:layout_editor_absoluteY="357dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/labelFraction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="0/0" />

            <TextView
                android:id="@+id/labelPrecentage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="100%"
                android:textAlignment="textEnd" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/buttonEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/edit" />

        <Button
            android:id="@+id/buttonDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/delete"
            android:visibility="gone" />

        <Button
            android:id="@+id/btnReset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/reset"
            android:visibility="gone" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>